; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_getchar.c_restoreRedobuff.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_getchar.c_restoreRedobuff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@save_level = common dso_local global i64 0, align 8
@redobuff = common dso_local global i32 0, align 4
@save_redobuff = common dso_local global i32 0, align 4
@old_redobuff = common dso_local global i32 0, align 4
@save_old_redobuff = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @restoreRedobuff() #0 {
  %1 = load i64, i64* @save_level, align 8
  %2 = add nsw i64 %1, -1
  store i64 %2, i64* @save_level, align 8
  %3 = icmp eq i64 %2, 0
  br i1 %3, label %4, label %9

4:                                                ; preds = %0
  %5 = call i32 @free_buff(i32* @redobuff)
  %6 = load i32, i32* @save_redobuff, align 4
  store i32 %6, i32* @redobuff, align 4
  %7 = call i32 @free_buff(i32* @old_redobuff)
  %8 = load i32, i32* @save_old_redobuff, align 4
  store i32 %8, i32* @old_redobuff, align 4
  br label %9

9:                                                ; preds = %4, %0
  ret void
}

declare dso_local i32 @free_buff(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
